--- a/app3/package.json
+++ b/app3/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.11"
+    "react-scripts": "1.0.11",
+    "underscore": "^1.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
