--- a/app6/app/package.json
+++ b/app6/app/package.json
@@ -5,8 +5,12 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.1.2",
+    "react-router-redux": "^5.0.0-alpha.8",
     "react-scripts": "1.0.13",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
