add redux logger

--- a/app6/app/package.json
+++ b/app6/app/package.json
@@ -10,6 +10,7 @@
     "react-router-redux": "^5.0.0-alpha.8",
     "react-scripts": "1.0.13",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "whatwg-fetch": "^2.0.3"
   },
