--- a/typescript-kata-baseline/tsconfig.json
+++ b/typescript-kata-baseline/tsconfig.json
@@ -19,11 +19,6 @@
   },
   "exclude": [
     "node_modules",
-    "build",
-    "scripts",
-    "acceptance-tests",
-    "webpack",
-    "jest",
-    "src/setupTests.ts"
+    "build"
   ]
 }
