--- a/app-ts-3/package.json
+++ b/app-ts-3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kata-baseline",
+  "name": "kata-3-typescript",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,7 +8,8 @@
     "react-scripts-ts": "2.13.0"
   },
   "scripts": {
-    "start": "react-scripts-ts start"
+    "start": "react-scripts-ts start",
+    "lint": "tslint --exclude **/*.d.ts src/**/*.ts src/**/*.tsx"
   },
   "devDependencies": {
     "@types/node": "^9.4.0",
