--- a/app-ts-5/app/package.json
+++ b/app-ts-5/app/package.json
@@ -18,5 +18,6 @@
     "@types/react": "^16.0.35",
     "@types/react-dom": "^16.0.3",
     "typescript": "^2.6.2"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
