--- a/app-ts-6/app/package.json
+++ b/app-ts-6/app/package.json
@@ -4,16 +4,18 @@
   "private": true,
   "dependencies": {
     "@types/react-router-dom": "^4.2.6",
+    "@types/react-router-redux": "^5.0.15",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts-ts": "2.13.0",
-    "whatwg-fetch": "^2.0.4",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "2.2.0",
-    "typesafe-actions": "^1.1.2"
+    "typesafe-actions": "^1.1.2",
+    "whatwg-fetch": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts-ts start",
